cluster/scrutiny/collector-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: scrutiny-collector-daemonset
  namespace: scrutiny
spec:
  # tolerations:
  #   # these tolerations are to have the daemonset runnable on control plane nodes
  #   # remove them if your control plane nodes should not run pods
  #   - key: node-role.kubernetes.io/control-plane
  #     operator: Exists
  #     effect: NoSchedule
  #   - key: node-role.kubernetes.io/master
  #     operator: Exists
  #     effect: NoSchedule
  selector:
    matchLabels:
      app: scrutiny-collector
  template:
    metadata:
      labels:
        app: scrutiny-collector
    spec:
      containers:
        - name: scrutiny-collector
          # registry-proxy image-prefix
          image: cr.nathanv.app/ghcr.io/analogj/scrutiny:v0.9.5-collector
          volumeMounts:
            - name: udev
              mountPath: /run/udev
              readOnly: true
            - name: collector-config-vol
              mountPath: /opt/scrutiny/config/collector.yaml
              subPath: collector.yaml
          securityContext:
            runAsUser: 0
            privileged: true # only way to get this to work
      volumes:
        - name: udev
          hostPath:
            path: /run/udev
        - name: collector-config-vol
          configMap:
            name: collector-config
