cluster/scrutiny/influxdb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scrutiny-influxdb-deployment
  namespace: scrutiny
spec:
  replicas: 1
  serviceName: scrutiny-influxdb
  selector:
    matchLabels:
      app: scrutiny-influxdb
  template:
    metadata:
      labels:
        app: scrutiny-influxdb
    spec:
      nodeSelector:
        role: apps
      containers:
        - name: scrutiny-influxdb
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/library/influxdb:2.9
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8086/health
            failureThreshold: 20
            periodSeconds: 5
            timeoutSeconds: 10
          ports:
            - containerPort: 8086
          volumeMounts:
            - mountPath: /var/lib/influxdb2
              name: scrutiny-influxdb-vol
      volumes:
        - name: scrutiny-influxdb-vol
          persistentVolumeClaim:
            claimName: scrutiny-influxdb-pvc
