cluster/scrutiny/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrutiny-influxdb-service
  namespace: scrutiny
spec:
  type: ClusterIP
  selector:
    app: scrutiny-influxdb
  ports:
    - port: 8086
      protocol: TCP
