cluster/scrutiny/web-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: scrutiny-web-service
    namespace: scrutiny
spec:
    type: ClusterIP
    selector:
        app: scrutiny-web
    ports:
      - port: 8080
        protocol: TCP
